fix: navbar ui on mobile admin rounded form

--- a/front-end/src/app/admin/agendamento/components/upcoming-schedule.css
+++ b/front-end/src/app/admin/agendamento/components/upcoming-schedule.css
@@ -2,7 +2,6 @@
 .meeting-card {
   border-radius: 2rem;
   width: 100%;
-  max-width: 100%;
   display: flex;
   flex-direction: column;
   /* justify-items: center; */
